# bookie_evaluator

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  backtesting.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: odds_client.py
ml/: __init__.py  model.py
models/: odds_analyzer.py
utils/: file_utils.py
